--- a/src/app/_content/app.less
+++ b/src/app/_content/app.less
@@ -28,7 +28,6 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 300px;
     width: 100%;
 }
 
@@ -41,10 +40,38 @@ a {
     flex-direction: column;
 }
 
+.health-box-wrapper {
+    height: 300px;
+}
+
+.action-control-box-wrapper {
+    height: 100px;
+}
+
+.logs-box-wrapper {
+    height: 300px;
+    max-height: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    overflow-x: hidden;
+    overflow-y: auto;
+    position: relative;
+}
+
+.log-row-wrapper {
+    width: 100%;
+    padding: 10px;
+}
+
 .health-wrapper {
     height: 80%;
     width: 80%;
     display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
 }
 
 .player-health-wrapper, .monster-health-wrapper {
@@ -55,4 +82,43 @@ a {
     background-color: lightgreen;
     height: 100%;
     transition: width linear 0.4s;
+    position: absolute;
+    left: 0px;
+}
+
+.alert-dialogue-bg {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    background-color: rgba(0,0,0,0.2);
+}
+
+.alert-dialogue {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: white;
+    border: 1px solid black;
+    border-radius: 5px;
+    height: 150px;
+    width: 400px;
+}
+
+.alert-title {
+    width: 100%;
+    text-align: center;
+}
+
+.alert-inner-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.current-heath-text {
+    position: absolute;
 }
