--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
 </nav>
 
 <!-- main app container -->
-<div class="jumbotron">
+<div class="p-5">
     <div class="container">
         <div class="row">
             <div [ngClass]="{'col-sm-6 offset-sm-3': !currentUser, 'col-12': currentUser}">
